# NTP_Client

./: CMakeLists.txt  LICENSE  Makefile  NTP_Client.sln  README.md
NTP_Client/: CMakeLists.txt  Makefile  NTP_Client.cpp  NTP_Client.vcxproj  config.ini  main.cpp
